// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test BackButton should render correctly 1`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-color-default ant-btn-variant-text enhancer button desktop windows"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <svgr-url />
    </span>
    <span>
      Back
    </span>
  </button>
</div>
`;

exports[`test BackButton should render correctly 2`] = `
<div>
  <button
    class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-color-default ant-btn-variant-text enhancer button"
    type="button"
  >
    <span
      class="ant-btn-icon"
    >
      <svgr-url />
    </span>
    <span>
      Back
    </span>
  </button>
</div>
`;
